# hpcs-mini-project

./: .gitignore  CMakeLists.txt  benchmark.sh  cmake.md  main.cpp  main.cu  result_cuda.txt
